--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "md5": "^2.3.0",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
-    "node": "^24.8.0",
+    "node": "24.9.0",
     "node-fetch": "^3.3.2",
     "npm": "^11.6.0",
     "pnpm": "^10.16.1",
@@ -58,7 +58,7 @@
     "vuepress-plugin-medium-zoom": "1.1.9",
     "wmic": "^1.1.1",
     "wrappy": "^1.0.2",
-    "yarn": "^1.22.22"
+    "yarn": "1.22.22"
   },
   "dependencies": {
     "@vuepress/plugin-copyright": "2.0.0-rc.112",
