--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@docsearch/js": "^3.9.0",
     "@vuepress/bundler-vite": "2.0.0-rc.26",
     "@vuepress/plugin-blog": "2.0.0-rc.118",
+    "@vuepress/plugin-markdown-chart": "^2.0.0-rc.109",
     "@vuepress/theme-default": "2.0.0-rc.118",
     "ali-oss": "^6.22.0",
     "browserslist": "^4.24.3",
@@ -39,6 +40,7 @@
     "highlight.js": "^11.11.1",
     "markdown-it-katex": "^2.0.3",
     "md5": "^2.3.0",
+    "mermaid": "^10.9.0-rc.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "node": "24.9.0",
@@ -55,6 +57,7 @@
     "vp-update": "^2.0.0-rc.15",
     "vue": "^3.5.24",
     "vuepress": "2.0.0-rc.26",
+    "vuepress-plugin-md-enhance": "^2.0.0-rc.98",
     "vuepress-plugin-medium-zoom": "1.1.9",
     "wmic": "^1.1.1",
     "wrappy": "^1.0.2",
